; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nf_conntrack_helper.c_expect_iter_me.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nf_conntrack_helper.c_expect_iter_me.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf_conntrack_expect = type { %struct.nf_conntrack_helper*, i32 }
%struct.nf_conntrack_helper = type { i32 }
%struct.nf_conn_help = type { i32 }

@nf_conntrack_expect_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nf_conntrack_expect*, i8*)* @expect_iter_me to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @expect_iter_me(%struct.nf_conntrack_expect* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nf_conntrack_expect*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.nf_conn_help*, align 8
  %7 = alloca %struct.nf_conntrack_helper*, align 8
  %8 = alloca %struct.nf_conntrack_helper*, align 8
  store %struct.nf_conntrack_expect* %0, %struct.nf_conntrack_expect** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load %struct.nf_conntrack_expect*, %struct.nf_conntrack_expect** %4, align 8
  %10 = getelementptr inbounds %struct.nf_conntrack_expect, %struct.nf_conntrack_expect* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call %struct.nf_conn_help* @nfct_help(i32 %11)
  store %struct.nf_conn_help* %12, %struct.nf_conn_help** %6, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to %struct.nf_conntrack_helper*
  store %struct.nf_conntrack_helper* %14, %struct.nf_conntrack_helper** %7, align 8
  %15 = load %struct.nf_conntrack_expect*, %struct.nf_conntrack_expect** %4, align 8
  %16 = getelementptr inbounds %struct.nf_conntrack_expect, %struct.nf_conntrack_expect* %15, i32 0, i32 0
  %17 = load %struct.nf_conntrack_helper*, %struct.nf_conntrack_helper** %16, align 8
  %18 = load %struct.nf_conntrack_helper*, %struct.nf_conntrack_helper** %7, align 8
  %19 = icmp eq %struct.nf_conntrack_helper* %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %31

21:                                               ; preds = %2
  %22 = load %struct.nf_conn_help*, %struct.nf_conn_help** %6, align 8
  %23 = getelementptr inbounds %struct.nf_conn_help, %struct.nf_conn_help* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @lockdep_is_held(i32* @nf_conntrack_expect_lock)
  %26 = call %struct.nf_conntrack_helper* @rcu_dereference_protected(i32 %24, i32 %25)
  store %struct.nf_conntrack_helper* %26, %struct.nf_conntrack_helper** %8, align 8
  %27 = load %struct.nf_conntrack_helper*, %struct.nf_conntrack_helper** %8, align 8
  %28 = load %struct.nf_conntrack_helper*, %struct.nf_conntrack_helper** %7, align 8
  %29 = icmp eq %struct.nf_conntrack_helper* %27, %28
  %30 = zext i1 %29 to i32
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %21, %20
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local %struct.nf_conn_help* @nfct_help(i32) #1

declare dso_local %struct.nf_conntrack_helper* @rcu_dereference_protected(i32, i32) #1

declare dso_local i32 @lockdep_is_held(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
